k8s-manifests/deployments/redis-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster  # Changed name
spec:
  clusterIP: None  # Changed to headless service
  selector:
    app: redis-cluster
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
